# Demonstrators

./: CMakeLists.txt  GNUmakefile
Demonstrators/: CMakeLists.txt  GNUmakefile
Demonstrators/FakeClusterFinder/: CMakeLists.txt  ClusterFinderAlgorithm.cxx  ClusterFinderAlgorithm.h  ClusterFinderHelper.cxx  ClusterFinderHelper.h  GNUmakefile  LinkDef.h
Demonstrators/FakeClusterFinder/mac/: readFakeClusters.py  runClusterFinding.py
FakeClusterFinder/: ClusterFinderAlgorithm.cxx  ClusterFinderHelper.cxx  GNUmakefile
FakeClusterFinder/mac/: readFakeClusters.py  runClusterFinding.py
doc/: doxygenMyProject+.script  doxygenMyProject.script
ups/: product_deps
